[workspace]
members = [
    "tcx-proto",
    "tcx-constants",
    "tcx-primitive",
    "tcx-crypto",
    "tcx-ethereum",
    "tcx-chain",
    "tcx-tron",
    "tcx-btc-fork",
    "tcx-bch",
    "tcx-ckb",
    "tcx-substrate",
    "tcx-filecoin",
    "tcx",
    "tcx-tezos",
    "tcx-tester",
    "tcx-solana",
    "tcx-aptos",
    "tcx-sui",
    "tcx-starknet",
]

#[patch.crates-io]
#forest_address = { path = "../forest/vm/address" }

[patch.crates-io]
forest_address = { git = "https://github.com/boolnetwork/forest.git", branch = "token-core" }