[package]
name = "tcx-aleo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-constants = { path = "../tcx-constants" }
snarkvm-console = { git = "https://github.com/ABMatrix/snarkVM.git", branch = "ABMatrix/token-core", features = ["account"] }
failure = "0.1.5"

[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"