[package]
name = "tcx-aleo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-constants = { path = "../tcx-constants" }
snarkvm-console = { git = "https://github.com/ABMatrix/snarkVM.git", branch = "ABMatrix/token-core", features = ["account"] }
snarkvm-synthesizer = { git = "https://github.com/ABMatrix/snarkVM.git", branch = "ABMatrix/token-core" }
failure = "0.1.5"
reqwest = "0.11.17"
wasm-bindgen = {version =  "0.2"}
serde-wasm-bindgen = "0.5.0"
#js-sys = "0.3.61"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.rand]
version = "0.8"
default-features = false

[dev-dependencies.tokio]
version = "1.28.0"
features = ["macros"]