[package]
name = "tcx-aleo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
tcx-constants = { path = "../tcx-constants" }
snarkvm-console = { git = "https://github.com/ABMatrix/snarkVM.git", branch = "ABMatrix/token-core", features = ["wasm"] }
snarkvm-synthesizer = { git = "https://github.com/ABMatrix/snarkVM.git", branch = "ABMatrix/token-core", features = ["wasm"] }
#snarkvm-console = {version = "0.11.0", fearures = ["wasm"]}
#snarkvm-synthesizer = {version = "0.11.0", fearures = ["wasm"]}
failure = "0.1.5"
reqwest = "0.11"
wasm-bindgen = { version = "0.2" }
serde-wasm-bindgen = "0.5.0"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4", optional = true }
serde = "1"
serde_json = "1"
rand = {version = "0.8", default-features = false}

[target."cfg(not(all(any(target_arch = \"wasm32\", target_arch = \"wasm64\"), not(target_os = \"wasi\"))))".dev-dependencies.tokio]
version = "1.27"
features = ["macros"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
indexmap = "1.9"
reqwest = {version = "0.11", features = ["json"]}

[profile.release]
opt-level = "s"
