[package]
name = "tcx-sui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcx-chain = { path = "../tcx-chain" }
tcx-constants = { path = "../tcx-constants" }
tcx-primitive = { path = "../tcx-primitive" }
sp-core = "20.0.0"
failure = "0.1.5"
hex = "0.3.2"
blake2b-rs = "0.1.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.88"
move-core-types = "0.0.2"
schemars ="0.8.10"
serde_with = "2.1.0"
serde_repr = "0.1"
bs58 = "0.4.0"
eyre = "0.6.8"
prost = "0.6.1"
bcs = "0.1.3"
base64 = "0.12.0"
sha2 = "0.10.1"